# docsy

./: README.md  pyproject.toml
docs/: .readthedocs.yaml
docs/source/: index.rst
docs/source/main/: add-code.rst  authors.rst  changelog.rst  get-started.rst
