[project]
name = "docsy"
version = "0.1.0"
description = "Smart Docs for Smart Minds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-code-tabs>=0.5.5",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-git>=11.0.0",
    "sphinx-prompt>=1.10.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-jquery>=4.1",
]
